--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   auto_direction: ^0.0.6
   permission_handler: ^11.3.1
   awesome_notifications: ^0.8.2
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
