--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,8 +23,21 @@ if (flutterVersionName == null) {
     flutterVersionName = "1.0"
 }
 
+
+def keystoreProperties = new Properties()
+
+def keystorePropertiesFile = rootProject.file("key.properties")
+
+if (keystorePropertiesFile.exists()) {
+
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+}
+
+
+
 android {
-    namespace = "com.example.jcp_vs1"
+    namespace = "com.zaid.Jcpcar.name"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -35,14 +48,15 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.jcp_vs1"
+        applicationId = "com.zaid.Jcpcar.name"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
-        versionCode = flutterVersionCode.toInteger()
-        versionName = flutterVersionName
+        versionCode = 3
+        versionName = '1.2.0'
     }
+
 
     buildTypes {
         release {
@@ -50,6 +64,35 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
+    }
+//dart run change_app_package_name:main com.zaid.Jcpcar.name
+
+    signingConfigs {
+
+        release {
+
+            keyAlias keystoreProperties["keyAlias"]
+
+            keyPassword keystoreProperties["keyPassword"]
+
+            storeFile keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
+
+            storePassword keystoreProperties["storePassword"]
+
+        }
+
+    }
+
+
+
+    buildTypes {
+
+        release {
+
+            signingConfig signingConfigs.release
+
+        }
+
     }
 }
 
