--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   permission_handler: ^11.3.1
   awesome_notifications: ^0.8.2
   multi_select_flutter: ^4.1.3
+  change_app_package_name: ^1.4.0
 
 dev_dependencies:
   flutter_test:
