--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,10 @@ dependencies:
   msh_checkbox: ^2.0.1
   auto_direction: ^0.0.6
   permission_handler: ^11.3.1
-  awesome_notifications: ^0.8.2
   multi_select_flutter: ^4.1.3
   change_app_package_name: ^1.4.0
+  flutter_background_service: ^5.0.10
+  flutter_background_service_android: ^6.2.7
 
 dev_dependencies:
   flutter_test:
