--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,16 +33,18 @@ dependencies:
   change_app_package_name: ^1.4.0
   flutter_background_service: ^5.0.10
   flutter_background_service_android: ^6.2.7
+  flutter_launcher_icons: ^0.14.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
 
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/images/app_logo.png"
+
+
   min_sdk_android: 21
 
   flutter_lints: ^2.0.0
