--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,103 +1,85 @@
-plugins {
-    id "com.android.application"
-    // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
-    id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
-    id "dev.flutter.flutter-gradle-plugin"
-}
-
-def localProperties = new Properties()
-def localPropertiesFile = rootProject.file("local.properties")
-if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader("UTF-8") { reader ->
-        localProperties.load(reader)
-    }
-}
-
-def flutterVersionCode = localProperties.getProperty("flutter.versionCode")
-if (flutterVersionCode == null) {
-    flutterVersionCode = "1"
-}
-
-def flutterVersionName = localProperties.getProperty("flutter.versionName")
-if (flutterVersionName == null) {
-    flutterVersionName = "1.0"
-}
-
-
-def keystoreProperties = new Properties()
-
-def keystorePropertiesFile = rootProject.file("key.properties")
-
-if (keystorePropertiesFile.exists()) {
-
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-
-}
-
-
-
-android {
-    namespace = "com.zaid.Jcpcar.name"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
-
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+    plugins {
+        id 'com.android.application'
+        id "kotlin-android"
+        id "dev.flutter.flutter-gradle-plugin"
+        id "com.google.gms.google-services" // Plugin for Firebase
     }
 
-    defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.zaid.Jcpcar.name"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = 8
-        versionName = '1.4.1'
-    }
-
-    buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+    def localProperties = new Properties()
+    def localPropertiesFile = rootProject.file("local.properties")
+    if (localPropertiesFile.exists()) {
+        localPropertiesFile.withReader("UTF-8") { reader ->
+            localProperties.load(reader)
         }
     }
-//dart run change_app_package_name:main com.zaid.Jcpcar.name
 
-    signingConfigs {
+    def flutterVersionCode = localProperties.getProperty("flutter.versionCode")
+    if (flutterVersionCode == null) {
+        flutterVersionCode = "1"
+    }
 
-        release {
+    def flutterVersionName = localProperties.getProperty("flutter.versionName")
+    if (flutterVersionName == null) {
+        flutterVersionName = "1.0"
+    }
 
-            keyAlias keystoreProperties["keyAlias"]
+    def keystoreProperties = new Properties()
+    def keystorePropertiesFile = rootProject.file("key.properties")
+    if (keystorePropertiesFile.exists()) {
+        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    }
 
-            keyPassword keystoreProperties["keyPassword"]
+    android {
+        namespace = "com.zaid.Jcp.car"
+        compileSdk = 35
+        ndkVersion = "27.0.12077973"
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_17
+            targetCompatibility JavaVersion.VERSION_17
+        }
+        compileSdkVersion 35
+        defaultConfig {
+            applicationId "com.zaid.Jcp.car"
+            minSdk 23
+            targetSdk 35
+            versionCode 43
+            versionName "1.5.5"
+        }
 
-            storeFile keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
+        kotlinOptions {
+            jvmTarget = "17"
+        }
+        signingConfigs {
+            release {
+                keyAlias keystoreProperties["keyAlias"]
+                keyPassword keystoreProperties["keyPassword"]
+                storeFile keystoreProperties["storeFile"] ? file(keystoreProperties["storeFile"]) : null
+                storePassword keystoreProperties["storePassword"]
+            }
+        }
+        packaging {
+            jniLibs {
+                useLegacyPackaging = false
+            }
+        }
 
-            storePassword keystoreProperties["storePassword"]
-
+        buildTypes {
+            release {
+                signingConfig signingConfigs.release
+                minifyEnabled true
+                shrinkResources true
+            }
         }
 
     }
 
-
-
-    buildTypes {
-
-        release {
-
-            signingConfig signingConfigs.release
-
-        }
-
+    flutter {
+        source = "../.."
     }
-}
 
-flutter {
-    source = "../.."
-}
+    dependencies {
+        implementation platform('com.google.firebase:firebase-bom:32.1.1')
+        implementation 'com.google.firebase:firebase-analytics'
+        implementation 'com.google.firebase:firebase-auth'
+        implementation 'com.google.firebase:firebase-firestore'
+    }
